fix button being too close to action type

--- a/style.css
+++ b/style.css
@@ -97,6 +97,7 @@ main {
 .action__type {
     display: block;
     width: 1em;
+    margin-right: 1em;
 }
 
 .action__category {
